Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110963

Q Designer: inactive QPalette color values not stored correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P4: Low
    • 6.4.3, 6.5.0 Beta3
    • 6.4.2
    • Tools: Designer
    • None
    • Name: Manjaro Linux
      Version: 22.0.1 (Sikaris)
      Codename: Sikaris

      Qt Creator 9.0.1
      Base on Qt 6.4.2 (GCC 12.2.0, x86_64)
    • ce100433b (dev), 957657533 (dev), a4551c996 (dev), f3d80f879 (6.4), 472f89806 (6.4), 94e3b4b05 (6.4), 5806781fa (6.5), 4b311995d (6.5), 914c7c3fe (6.5), dd1f00da0 (dev), 0a4fb70b2 (6.5), 17c9d1e01 (6.4), 0168e4421 (tqtc/lts-6.2), 1fae23c85 (tqtc/lts-6.2)

    Description

      When setting "Inactive" colors in the palette for a label or form via QtCreator only default values are stored in the ui-File. This leads to ugly/unexpected dialogs or windows when they loose focus.

      As can be seen on palette screenshot colors should be light-green (143, 240, 164) and light-blue (153, 193, 164) respectively.

      Snippet of UI file content:

              <inactive>
               <colorrole role="WindowText">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>0</red>
                  <green>0</green>
                  <blue>0</blue>
                 </color>
                </brush>
               </colorrole>
               <colorrole role="Window">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>239</red>
                  <green>239</green>
                  <blue>239</blue>
                 </color>
                </brush>
               </colorrole>
              </inactive>

      Attachments

        1. EditPalette.png
          25 kB
          Hinrichs Friedhelm
        2. ActiveWindow.png
          4 kB
          Hinrichs Friedhelm
        3. InactiveWindow.png
          4 kB
          Hinrichs Friedhelm
        4. ExpectedInactiveWindow.png
          4 kB
          Hinrichs Friedhelm
        5. MainWindow.ui
          3 kB
          Hinrichs Friedhelm
        6. qtbug110963.zip
          3 kB
          Friedemann Kleint
        7. qtbug110963_test.zip
          0.9 kB
          Friedemann Kleint
        8. qtbug110963_diag.diff
          5 kB
          Friedemann Kleint
        9. qtbug110963_diag_2.diff
          5 kB
          Friedemann Kleint

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              fredatwork Hinrichs Friedhelm
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes