Qt Designer: Fix bitCount helper function to work with QPalette

The QPalette resolve mask type has been changed to 64bit.
Make it a template so that it works correctly.

Task-number: QTBUG-110963
Change-Id: I61394c58155bdc37a98dac0c763e6a7d9fbbfe84
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit ce100433b239ac13b1711b5292481605ce8456e8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>